<resources>
    <string name="app_name">Dating App</string>
    <string name="discover">Discover</string>
    <string name="notes">Notes</string>
    <string name="matches">Matches</string>
    <string name="profile">Profile</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp">Enter The <br/> OTP</string>
    <string name="enter_ph_no">Enter Your <br/> Phone Number</string>
    <string name="hint_continue">Continue</string>
    <string name="india_country_code">+91</string>
    <string name="err_phone_number">Please enter a valid Phone Number</string>
    <string name="timer">00:%s</string>
    <string name="err_otp">Please enter a valid OTP</string>

    <!--Discover-->
    <string name="discover_header">Notes</string>
    <string name="discover_sub_header">Personal messages to you</string>
    <string name="interested_hint">Interested In You</string>
    <string name="premium_members_hint">Premium members can view all <br/>  the likes at once</string>
    <string name="upgrade_hint">Upgrade</string>

    <string name="tap_to_review">Tap to review %s+ notes</string>
</resources>