<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="18dp">

    <TextView
        android:id="@+id/tv_discover_header"
        style="@style/DiscoverHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discover_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/tv_discover_sub_header"
        style="@style/DiscoverSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/discover_sub_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_discover_header" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_discover_image"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_discover_sub_header">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:scrollY="-50dp"
            android:src="@drawable/discover_cutie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_discover_sub_header"
            app:shapeAppearanceOverlay="@style/RoundedImageView" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_interested"
        style="@style/InterestedHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/interested_hint"
        app:layout_constraintStart_toStartOf="@id/cv_discover_image"
        app:layout_constraintTop_toBottomOf="@id/cv_discover_image" />

    <TextView
        android:id="@+id/tv_premium_hint"
        style="@style/PremiumHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/premium_members_hint"
        app:layout_constraintEnd_toStartOf="@id/btn_upgrade"
        app:layout_constraintStart_toStartOf="@id/tv_interested"
        app:layout_constraintTop_toBottomOf="@id/tv_interested" />

    <Button
        android:id="@+id/btn_upgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/action_btn_bg"
        android:text="@string/upgrade_hint"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/action_btn_corner_radius"
        app:layout_constraintBottom_toBottomOf="@id/tv_premium_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_interested" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/item_profiles"
        tools:itemCount="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_premium_hint" />

    <include layout="@layout/layout_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>