<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp">

    <TextView
        android:id="@+id/tv_get_otp"
        style="@style/SubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_otp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_enter_num"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/enter_ph_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_get_otp" />

    <EditText
        android:id="@+id/et_country_code"
        android:layout_width="60dp"
        android:layout_height="@dimen/rounded_et_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_rounded_edittext"
        android:enabled="false"
        android:gravity="center"
        android:maxLength="3"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/india_country_code"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_num" />

    <EditText
        android:id="@+id/et_ph_num"
        android:layout_width="0dp"
        android:layout_height="@dimen/rounded_et_height"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="phoneNumberDevice"
        android:background="@drawable/bg_rounded_edittext"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        style="@style/UserInput"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintStart_toEndOf="@id/et_country_code"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_num" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bnt_continue"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/action_btn_bg"
        android:text="@string/hint_continue"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/action_btn_corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_country_code" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_input_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="bnt_continue,tv_enter_num,tv_get_otp,et_country_code,et_ph_num" />

    <include layout="@layout/layout_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>